--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 ---
 ## 「zoi X. （テキスト） .X」:
 ## （テキスト）を文字列（音素列）として引用
-### 「zoi .urli. https://www.infiniteloop.co.jp/ .urli」
+### 「zoi .urli. http://www.example.com/ .urli」
 ### 「zoi py. 竹やぶ焼けた .py.」
 
 ---
